# pulse-ai

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  docker-compose.yml  pulse.db
.github/workflows/: ci.yml
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: anomaly.py  database.py  main.py  models.py  schemas.py
backend/app/api/: router.py
backend/app/api/routers/: ai.py  alerts.py  evaluation.py  events.py  governance.py  incidents.py  metrics.py  scoring.py
backend/app/core/: auth.py  background_jobs.py  cache.py  config.py  ingestion_buffer.py  logging.py
backend/app/db/: session.py
backend/app/models/: __init__.py  alert.py  alert_note.py  anomaly_score.py  audit_log.py  detector_config.py  event.py  incident.py  incident_note.py  suppression_rule.py
backend/app/schemas/: __init__.py  ai.py  alert.py  evaluation.py  event.py  governance.py  incident.py  metrics.py  scoring.py
backend/app/services/: ai_summary_service.py  alert_service.py  evaluation_service.py  event_service.py  governance_service.py  incident_service.py  metrics_service.py  scoring_service.py
backend/scripts/: run_demo.py
backend/tests/: conftest.py  test_api.py  test_ingestion.py  test_phase2.py  test_phase3.py  test_phase4.py  test_phase5.py  test_phase6.py  test_phase7.py  test_phase8.py  test_runtime_utilities.py  test_scoring.py
docs/: api.md  architecture.md  demo.md  deployment.md
frontend/: Dockerfile  README.md  index.html  package-lock.json  package.json
frontend/src/: App.jsx  styles.css
frontend/src/components/: DataTable.jsx  (+3 more)
(+6 files in other folders)
